ui package: In JobStatusView class updated filter by range functionality