@@ -2,7 +2,8 @@ package com.dbmonitor.app.ui;
 
 import com.dbmonitor.app.model.SQLJob;
 import com.dbmonitor.app.service.SQLJobService;
-import com.vaadin.flow.component.datepicker.DatePicker;
+import com.dbmonitor.app.util.DateRangePicker;
+import com.dbmonitor.app.util.LocalDateRange;
 import com.vaadin.flow.component.grid.Grid;
 import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
@@ -15,64 +16,101 @@ import org.springframework.beans.factory.annotation.Autowired;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @PageTitle("SQL Job Status")
 @Route(value = "job-status", layout = MainLayout.class)
 public class JobStatusView extends VerticalLayout {
 
-    private final Grid<SQLJob> jobGrid = new Grid<>();
-    private final SQLJobService jobService;
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("dd-MM-yyyy; hh:mm a");
-    private final Select<String> statusFilter = new Select<>();
-    private final DatePicker dateFilter = new DatePicker("Filter by Date");
+
+    private final Grid<SQLJob> jobGrid;
+    private final SQLJobService jobService;
+    private final Select<String> statusFilter;
+    private final DateRangePicker dateRangeFilter;
 
     @Autowired
     public JobStatusView(SQLJobService jobService) {
-        this.jobService = jobService;
-        configureFilters();
-        configureGrid();
-        add(new HorizontalLayout(statusFilter, dateFilter), jobGrid);
+        this.jobService = Objects.requireNonNull(jobService, "SQLJobService must not be null");
+        this.jobGrid = new Grid<>(SQLJob.class, false);
+        this.statusFilter = new Select<>();
+        this.dateRangeFilter = new DateRangePicker("Filter by Date Range");
 
+        configureComponents();
+        buildLayout();
+        loadInitialData();
+    }
+
+    @PostConstruct
+    private void loadInitialData() {
+        refreshGrid();
+    }
+
+    private void configureComponents() {
+        configureGrid();
+        configureFilters();
+    }
+
+    private void configureGrid() {
+        jobGrid.addColumn(SQLJob::getJobId).setHeader("Job ID").setWidth("80px").setFlexGrow(0).setSortable(true);
+        jobGrid.addColumn(SQLJob::getJobName).setHeader("Job Name").setResizable(true).setSortable(true);
+        jobGrid.addColumn(SQLJob::getStatus).setHeader("Status").setResizable(true).setSortable(true);
+        jobGrid.addColumn(this::formatStartTime).setHeader("Start Time").setResizable(true).setSortable(true);
+        jobGrid.addColumn(this::formatEndTime).setHeader("End Time").setResizable(true).setSortable(true);
+        jobGrid.addColumn(SQLJob::getRunDuration).setHeader("Run Duration").setResizable(true).setSortable(true);
+    }
+
+    private void configureFilters() {
+        statusFilter.setLabel("Filter by Status");
+        statusFilter.setItems("All", "Completed", "Running", "Pending", "Failed");
+        statusFilter.setValue("All");
+        statusFilter.addValueChangeListener(e -> refreshGrid());
+
+        dateRangeFilter.addValueChangeListener(e -> refreshGrid());
+    }
+
+    private void buildLayout() {
+        HorizontalLayout filterLayout = new HorizontalLayout(statusFilter, dateRangeFilter);
+        filterLayout.setSpacing(true);
+        filterLayout.setAlignItems(Alignment.BASELINE);
+
+        add(filterLayout, jobGrid);
         setSizeFull();
         jobGrid.setSizeFull();
     }
 
-    private void configureFilters() {
-        // Status Filter
-        statusFilter.setLabel("Filter by Status");
-        statusFilter.setItems("All", "Completed", "Running", "Pending", "Failed");
-        statusFilter.setValue("All");
-        statusFilter.addValueChangeListener(e -> applyFilters());
+    private void refreshGrid() {
+        LocalDateRange range = dateRangeFilter.getValue();
+        LocalDate startDate = range != null ? range.getStartDate() : null;
+        LocalDate endDate = range != null ? range.getEndDate() : null;
 
-        // Date Filter
-        dateFilter.addValueChangeListener(e -> applyFilters());
-    }
-
-    private void applyFilters() {
         List<SQLJob> filteredJobs = jobService.getAllJobs().stream()
-                .filter(job -> "All".equals(statusFilter.getValue()) || job.getStatus().equals(statusFilter.getValue()))
-                .filter(job -> dateFilter.getValue() == null ||
-                        (job.getStartTime() != null && job.getStartTime().toLocalDateTime().toLocalDate().equals(dateFilter.getValue())))
-                .collect(Collectors.toList());
+                .filter(job -> filterByStatus(job.getStatus()))
+                .filter(job -> filterByDateRange(job, startDate, endDate))
+                .toList();
 
         jobGrid.setItems(filteredJobs);
     }
 
-    private void configureGrid() {
-        jobGrid.addColumn(SQLJob::getJobId).setHeader("Job ID").setWidth("80px").setFlexGrow(0);
-        jobGrid.addColumn(SQLJob::getJobName).setHeader("Job Name").setResizable(true);
-        jobGrid.addColumn(SQLJob::getStatus).setHeader("Status").setResizable(true);
-        jobGrid.addColumn(job -> job.getStartTime() != null ? job.getStartTime().toLocalDateTime().format(DATE_FORMATTER) : "N/A")
-                .setHeader("Start Time").setResizable(true);
-        jobGrid.addColumn(job -> job.getEndTime() != null ? job.getEndTime().toLocalDateTime().format(DATE_FORMATTER) : "N/A")
-                .setHeader("End Time").setResizable(true);
-        jobGrid.addColumn(SQLJob::getRunDuration).setHeader("Run Duration").setResizable(true);
-
+    private boolean filterByStatus(String jobStatus) {
+        String filterValue = statusFilter.getValue();
+        return "All".equals(filterValue) || Objects.equals(filterValue, jobStatus);
     }
 
-    @PostConstruct
-    private void loadJobs() {
-        jobGrid.setItems(jobService.getAllJobs());
+    private boolean filterByDateRange(SQLJob job, LocalDate startDate, LocalDate endDate) {
+        if (job.getStartTime() == null) return false;
+        LocalDate jobDate = job.getStartTime().toLocalDateTime().toLocalDate();
+        return (startDate == null && endDate == null) ||
+                (startDate != null && endDate != null && !jobDate.isBefore(startDate) && !jobDate.isAfter(endDate)) ||
+                (startDate != null && endDate == null && !jobDate.isBefore(startDate)) ||
+                (endDate != null && startDate == null && !jobDate.isAfter(endDate));
+    }
+
+    private String formatStartTime(SQLJob job) {
+        return job.getStartTime() != null ? job.getStartTime().toLocalDateTime().format(DATE_FORMATTER) : "N/A";
+    }
+
+    private String formatEndTime(SQLJob job) {
+        return job.getEndTime() != null ? job.getEndTime().toLocalDateTime().format(DATE_FORMATTER) : "N/A";
     }
 }
